2010-12-10  Sam Steingold  <sds@gnu.org>

	* path.tst: add a test for bug#3124200:
	setting *DEFAULT-PATHNAME-DEFAULTS* breaks REQUIRE

2010-11-29  Sam Steingold  <sds@gnu.org>

	* streams.tst: add a test for bug#3122505: LOAD bad FAS

2010-10-31  Vladimir Tzankov  <vtzankov@gmail.com>

	* mt.tst: add tests for :TEST and :TIMEOUT arguments of EXEMPTION-WAIT

2010-10-18  Sam Steingold  <sds@gnu.org>

	* loop.tst: add a test for bug#3089988: (loop for x do (print x))

2010-10-15  Sam Steingold  <sds@gnu.org>

	* path.tst: more PROBE-PATHNAME tests

2010-09-21  Sam Steingold  <sds@gnu.org>

	* screen.tst: add demo for the SCREEN package

2010-09-20  Sam Steingold  <sds@gnu.org>

	* streams.tst: test (LOAD #<INPUT STRING-INPUT-STREAM>)

2010-09-14  Sam Steingold  <sds@gnu.org>

	* path.tst: LOAD now returns the truename

2010-08-31  Sam Steingold  <sds@gnu.org>

	* path.tst: test that LOAD works even when there are files under
	*LOAD-PATHS* which cannot be parsed by *PATHNAME-ENCODING*

2010-08-13  Sam Steingold  <sds@gnu.org>

	* path.tst: test what happens when the :output-file argument to
	compile-file is an open stream (append vs. overwrite)

2010-08-06  Sam Steingold  <sds@gnu.org>

	* setf.tst (documented-struct): bug#3040648:
	documentation strings broken for structs

2010-07-12  Sam Steingold  <sds@gnu.org>

	* tests.lisp (*eval-times*): add defvar
	(my-eval): call TIMES if *EVAL-TIMES* is non-NIL
	(run-test): accept :TIMES

2010-07-04  Sam Steingold  <sds@gnu.org>

	* streamslong.tst: bug#3024887: make-pipe-output-stream segfaults
	when sending data

2010-06-24  Sam Steingold  <sds@gnu.org>

	* streamslong.tst: bug#3020933: (SETF STREAM-EXTERNAL-FORMAT)
	fails on TWO-WAY-STREAM

2010-06-15  Sam Steingold  <sds@gnu.org>

	* streamslong.tst: test EXT:MAKE-BUFFERED-OUTPUT-STREAM,
	including (close :abort)

2010-06-13  Sam Steingold  <sds@gnu.org>

	* streams.tst: bug#3014921: (stream-element-type
	  (make-concatenated-stream)) ==> NIL
